Included premises in psc service address

--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -780,6 +780,7 @@ components:
         - serviceAddressCareOf
         - serviceAddressPoBox
         - serviceAddressCountryName
+        - serviceAddresHouseNameNumber
         - officerNationality
         - officerDateOfBirth
         - houseNameNumber
@@ -839,6 +840,9 @@ components:
         serviceAddressRegion:
           type: string
           description: County
+        serviceAddressHouseNameNumber:
+          type: string
+          description: Premises
         officerNationality:
           type: string
           description: Nationality
