--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -542,13 +542,16 @@ components:
         surname:
           type: string
           description: The officers' surname.
+        alias:
+          type: string
+          description: The officers' alias.
         fromDate_of_birth:
           type: string
-          description: Officers' date of birth to search from.
+          description: officers' date of birth to search from.
           example: "2020-01-01"
         toDate_of_birth:
           type: string
-          description: Officers' date of birth to search up to.
+          description: officers' date of birth to search up to.
           example: "2020-01-01"
         postcode:
           type: string
