--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -535,23 +535,27 @@ components:
           $ref: '#/components/schemas/scottishBankruptOfficerSearchFilters'
     scottishBankruptOfficerSearchFilters:
       type: object
+      required:
+        - surname
+        - fromDate_of_birth
+        - toDate_of_birth
       properties:
         forename1:
           type: string
           description: The officers' first name.
         surname:
           type: string
-          description: The officers' surname.
+          description: The officers' surname. Only a single one of the required properties must be included
         alias:
           type: string
           description: The officers' alias.
         fromDate_of_birth:
           type: string
-          description: officers' date of birth to search from.
+          description: The officers' date of birth to search from. Only a single one of the required properties must be included
           example: "2020-01-01"
         toDate_of_birth:
           type: string
-          description: officers' date of birth to search up to.
+          description: The officers' date of birth to search up to. Only a single one of the required properties must be included
           example: "2020-01-01"
         postcode:
           type: string
