--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -537,8 +537,8 @@ components:
       type: object
       required:
         - surname
-        - fromDate_of_birth
-        - toDate_of_birth
+        - date_of_birth_from
+        - date_of_birth_to
       properties:
         forename1:
           type: string
@@ -549,11 +549,11 @@ components:
         alias:
           type: string
           description: The officers' alias.
-        fromDate_of_birth:
+        date_of_birth_from:
           type: string
           description: The officers' date of birth to search from. Only a single one of the required properties must be included.
           example: "2020-01-01"
-        toDate_of_birth:
+        date_of_birth_to:
           type: string
           description: The officers' date of birth to search up to. Only a single one of the required properties must be included.
           example: "2020-01-01"
