--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -21,6 +21,8 @@ tags:
     description: basic company information
   - name: officer-list
     description: list of company officers
+  - name: overseas-entity-data
+    description: Get private entity data for an overseas entity
     
 paths:
   /emergency-auth-code/company/{company_number}/eligible-officers:
@@ -1559,6 +1561,20 @@ components:
           type: string
           description: The region
           example: "Surrey"
+    overseasEntityData:
+      type: object
+      properties:
+        company_number:
+          type: string
+          description: The company number
+          example: "12345678"
+        email_address:
+          type: string
+          format: email
+          description: The email address of the overseas entity
+      required:
+        - company_number
+        - email_address
   parameters:
     companyNumber:
       name: 'company_number'
