--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@172.24.4.54:1521:CHIPSDEV
-spring.datasource.username=COOKIEUNIX2
-spring.datasource.password=COOKIEUNIX2
+spring.datasource.url=${CHIPS_DATASOURCE_URL}
+spring.datasource.username=${CHIPS_DATASOURCE_USERNAME}
+spring.datasource.password=${CHIPS_DATASOURCE_PASSWORD}
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=none
