--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -23,7 +23,9 @@ tags:
     description: list of company officers
   - name: overseas-entity-data
     description: Get private entity data for an overseas entity
-    
+  - name: beneficial-owners
+    description: list of beneficial owners of an overseas entity
+
 paths:
   /emergency-auth-code/company/{company_number}/eligible-officers:
     parameters:
@@ -347,8 +349,69 @@ paths:
                 $ref: '#/components/schemas/managingOfficerList'
         '404':
           description: No managing officers found
+  /overseas-entity/{companyNumber}/beneficial-owners:
+    parameters:
+      - $ref: '#/components/parameters/companyNumber'
+    get:
+      tags:
+        - beneficial-owners
+      operationId: getOverseasEntityBeneficialOwners
+      summary: Get a list of all beneficial owners for an overseas entity
+      responses:
+        '200':
+          description: Retrieve beneficial owner data for an overseas entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/overseas_entity_beneficial_owner_list'
+        '404':
+          description: No beneficial owner data found
 components:
   schemas:
+    overseas_entity_beneficial_owner_list:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/overseas_entity_beneficial_owner_data'
+    overseas_entity_beneficial_owner_data:
+      type: object
+      properties:
+        usual_residential_address:
+          type: object
+          description: The residential address of the beneficial owner
+          $ref: '#/components/schemas/officerURA'
+        id:
+          type: string
+          description: The id of the beneficial owner
+          example: "12345678900"
+        date_became_registrable:
+          type: string
+          description: The date the beneficial owner was appointed
+          example: "1990-01-01 00:00:00.0"
+        date_of_birth:
+          type: string
+          description: The date of birth of the beneficial owner
+          example: "1990-01-01 00:00:00.0"
+        is_service_address_same_as_usual_address:
+          type: string
+          description: Flag to indicate if service is same as usual address
+          example: "N"
+    overseasEntityData:
+      type: object
+      properties:
+        company_number:
+          type: string
+          description: The company number
+          example: "12345678"
+        email_address:
+          type: string
+          format: email
+          description: The email address of the overseas entity
+      required:
+        - company_number
+        - email_address
     companyOfficer:
       type: object
       required:
